<resources>
    <string name="app_name">SambiaApp</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>




    <string name="action_photo">View photo</string>
    <string name="action_info">Photo info</string>



    <!-- Navigation Menu -->
    <string name="nav_activity">Choose Activity</string>
    <string name="nav_dayview">View View</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about">About</string>
    <string name="nav_call">Call Help</string>
    <string name="nav_title_communicate">Communicate</string>
    <string name="hello_world">Hello List</string>
</resources>
