<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_activityview"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/nav_activity" />
        <item
            android:id="@+id/nav_dayview"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/nav_dayview" />
    </group>


    <item android:title="@string/nav_title_communicate">
        <menu>
            <item
                android:id="@+id/nav_call"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/nav_call" />
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/nav_settings" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/nav_about" />
        </menu>
    </item>

</menu>
